# CFONB_Analyzer

./: CMakeLists.txt  README.md  TpCFONB.md
include/: cfonb_parser.h  cfonb_stats.h  cfonb_types.h  cfonb_utils.h  cfonb_validator.h
src/: cfonb_parser.c  cfonb_utils.c  cfonb_validator.c  main.c
